<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".smartMeterView">

    <Button
        android:id="@+id/update"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="226dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meterReading_view" />

    <TextView
        android:id="@+id/meterNo_data"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@color/Gray2"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text="@string/meterNo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/elec_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/meterNo_view2"
        app:layout_constraintTop_toBottomOf="@+id/smartMeters" />

    <TextView
        android:id="@+id/reading_data"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Gray2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/readingData"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/meterReading_view"
        app:layout_constraintTop_toBottomOf="@+id/city_data" />

    <TextView
        android:id="@+id/meterNo_view2"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="30dp"
        android:text="@string/meterNo_form"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/elecNo_view"
        app:layout_constraintEnd_toStartOf="@+id/meterNo_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartMeters" />

    <TextView
        android:id="@+id/meterReading_view"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:text="@string/meterReading"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/reading_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_view" />

    <TextView
        android:id="@+id/city_view"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:text="@string/city"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/city_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street" />

    <TextView
        android:id="@+id/street"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:text="@string/street"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/street_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elecNo_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/smartMeters"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/smartMeters_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="176dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="serif"
            android:text="@string/smartMeters"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/elecNo_view"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:text="@string/elecAccNo"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/elec_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meterNo_view2" />

    <TextView
        android:id="@+id/city_data"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Gray2"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text="@string/cityData"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city_view"
        app:layout_constraintTop_toBottomOf="@+id/street_data" />

    <TextView
        android:id="@+id/street_data"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Gray2"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text="@string/streetData"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/street"
        app:layout_constraintTop_toBottomOf="@+id/elec_data" />

    <TextView
        android:id="@+id/elec_data"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@color/Gray2"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text="@string/elecAccNum"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elecNo_view"
        app:layout_constraintTop_toBottomOf="@+id/meterNo_data" />

    <Button
        android:id="@+id/delete"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="226dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reading_data" />

</androidx.constraintlayout.widget.ConstraintLayout>