<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newSmartMeter">

    <EditText
        android:id="@+id/meterNo_form"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="#E1DCDC"
        android:backgroundTint="#E4E1E1"
        android:ems="10"
        android:hint="@string/meterNo_form"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/elecAccNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartMeterForm" />

    <EditText
        android:id="@+id/elecAccNo"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="#E1DCDC"
        android:backgroundTint="#E4E1E1"
        android:ems="10"
        android:hint="@string/elecAccNo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meterNo_form" />

    <EditText
        android:id="@+id/city"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="#E1DCDC"
        android:backgroundTint="#E4E1E1"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_form" />

    <EditText
        android:id="@+id/street_form"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="#E1DCDC"
        android:backgroundTint="#E4E1E1"
        android:ems="10"
        android:hint="@string/street"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elecAccNo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/smartMeterForm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/smartMeterForm_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="98dp"
            android:layout_marginBottom="7dp"
            android:fontFamily="serif"
            android:text="@string/smartMeterForm"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="247dp"
        android:background="@drawable/button_corner"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="247dp"
        android:background="@drawable/button_corner"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

</androidx.constraintlayout.widget.ConstraintLayout>